--- a/basics.html
+++ b/basics.html
@@ -27,5 +27,11 @@
 </ul>
 <p>New message</p>
 
+<footer>
+    <p>
+        &copy; 2025 Nabin Sapkota. All Rights reserved
+    </p>
+</footer>
+
 </body>
 </html>
