--- a/basics.html
+++ b/basics.html
@@ -30,7 +30,9 @@
 <footer>
     <p>
         &copy; 2025 Nabin Sapkota. All Rights reserved
+        &trade; Sapkota
     </p>
+    <p>&CounterClockwiseContourIntegral; Nabin</p>
 </footer>
 
 </body>
